# TFG

./: CMakeLists.txt  Fecha.cpp  Fecha.h  IndiceTreeView.cpp  IndiceTreeView.h  Organization.cpp  Organization.h  StakeHolders.cpp  Stakeholder.cpp  Stakeholder.h  Trackeable.cpp  Trackeable.h  TreeView.cpp  TreeView.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  pr  treemodel.cpp  treemodel.h
Dominio/: Generic.cpp  Generic.h  Index.cpp  Index.h  InformationRequirement.cpp  InformationRequirement.h  Interview.cpp  Interview.h  Persona.cpp  Persona.h  UserCase.cpp  UserCase.h  UserCaseDiagram.cpp  UserCaseDiagram.h  UserStories.cpp  UserStories.h
Dominio/Clases/: Class.cpp  Class.h
Dominio/Priority/: Priority.cpp  Priority.h
Dominio/Repository/: PrintConsole.cpp  PrintConsole.h  Visitor.h
Dominio/Trackeable/: Fecha.cpp  Fecha.h  MatrixTraces.cpp  MatrixTraces.h  OID.cpp  OID.h  Organization.cpp  Organization.h  Stakeholder.cpp  Stakeholder.h  Trackeable.cpp  Trackeable.h
HTML/: HtmlManager.cpp  HtmlManager.cpp~HEAD  HtmlManager.cpp~main  HtmlManager.h  HtmlManager.h~HEAD  HtmlManager.h~main  ServicioHTML.cpp  ServicioHTML.cpp~HEAD  ServicioHTML.cpp~main  ServicioHTML.h  ServicioHTML.h~HEAD  ServicioHTML.h~main
Repository/: JsonRepository.cpp  JsonRepository.h  JsonSerializer.cpp  JsonSerializer.h  Visitor.cpp  Visitor.h
Servicio/: ServicioActorUC.cpp  ServicioActorUC.h  ServicioDiagramUC.cpp  ServicioDiagramUC.h  ServicioGeneric.cpp  ServicioGeneric.h  ServicioHTML.cpp  ServicioHTML.h  ServicioInformationRequirement.cpp  ServicioInformationRequirement.h  ServicioInterview.cpp  ServicioInterview.h  ServicioMatrixTraces.cpp  ServicioMatrixTraces.h  ServicioOrganization.cpp  ServicioOrganization.h  ServicioPersona.cpp  ServicioPersona.h  ServicioPriority.cpp  ServicioPriority.h  ServicioStakeholder.cpp  ServicioStakeholder.h  ServicioTrackeable.cpp  ServicioTrackeable.h  ServicioUserCase.cpp  ServicioUserCase.h  ServicioUserStories.cpp  ServicioUserStories.h
Servicio/ServicioClass/: ServicioClass.cpp  ServicioClass.h
SystemObjetive/: SystemObjetive.cpp  SystemObjetive.h
Trackeable/: Fecha.cpp  Organization.cpp  Organization.h  Stakeholder.cpp  Stakeholder.h  Trackeable.cpp  Trackeable.h
Visitor/: DiagramManager.cpp  DiagramManager.h  FileJsonManager.cpp  FileJsonManager.h  HtmlManager.cpp  HtmlManager.h  Jsoneitor.cpp  Jsoneitor.h  LinkedGeneralTree.cpp  PrintConsole.cpp  PrintConsole.h  Visitor.cpp  Visitor.h
Visitor/Repositorio/: Repositorio.cpp  Repositorio.h
nlohmann/: json.hpp
